Mon May 14 02:59:28 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reactor_Remove_Resume_Test.cpp:

          Fixed another compile-time error. An identifier's name was misspelled,
          causing a compile-time error in some builds.

Sun May 13 11:55:32 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * bin/generate_doxygen.pl:

          Fixed a logic error in the script when $DDS_ROOT is undefined.

Sun May 13 09:29:55 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
          Don't run Dirent_Test with VxWorks rtp, it hangs the target

Sat May 12 12:03:44 UTC 2007  Abdullah Sowayan  <abdullah.sowayan@lmco.com>

        * tests/Reactor_Remove_Resume_Test.cpp:

          Fixed a compile-time error. Removed an extra ";" from the end of
          function definitions.

Sat May 12 08:37:01 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * tests/Reactor_Remove_Resume_Test.cpp (handle_close):

          Fixed unused argument warning.

Fri May 11 21:18:45 UTC 2007  Steve Huston  <shuston@riverace.com>

        * examples/APG/Reactor/HAStatus.cpp (handle_output): Do the 'while'
          loop as long as dequeue() returns >= 0, not == 0. Thanks to
          Jules d'Entremont for reporting this.

        * THANKS: Added Jules d'Entremont.

        * tests/Makefile.am: Added Reactor_Remove_Resume_Test.

Fri May 11 21:49:01 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/TP_Reactor.cpp (dispatch_i):

          Return the number of event handlers dispatched (typically 1).
          Previously zero was returned regardless of whether or not
          socket/IO event handlers were dispatched.

          (post_process_socket_event):

          Only remove or resume the event handler used during the upcall.
          A different event handler may have been registered during the
          upcall if the handle was closed and then reopened, for example.